<resources>
    <string name="SS_ALLOWS_THE_APP_TO_TRANSFER_YOUR_DATA_VIA_BLUETOOTH_USING_THE_ACCESSORY_FRAMEWORK">Allows the app to transfer your data via Bluetooth using the accessory framework</string>
    <string name="SS_TRANSFERRING_DATA_VIA_FRAMEWORK_ABB">Transferring data via framework</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_connected_device_status">Access device connection status</string>
    <string name="access_connected_device_status_description">This application can access the wearable device connection status.</string>
    <string name="after_post_they_appear">The feedback that you send will appear here.</string>
    <string name="alertdialog_disconnect_popup_new_device_content">This will end your connection with %s.</string>
    <string name="all">All</string>
    <string name="always">Always</string>
    <string name="android_version">Android version</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="answered">ANSWERED</string>
    <string name="app_details">Additional apps</string>
    <string name="app_name">Galaxy Wearable</string>
    <string name="appbar_base_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ask_again">Ask again</string>
    <string name="ask_again_for_additional_questions">Tap ASK AGAIN to ask additional questions related to those already posted.</string>
    <string name="attach">Attach</string>
    <string name="attachments">Attachments</string>
    <string name="band">Band</string>
    <string name="band_guide">Disconnect your band from the previous phone. In the Galaxy Wearable app on the previous phone, tap the menu drawer, then tap Disconnect.</string>
    <string name="benefit_desc_1">See the battery level and more at a glance for your connected watch, band, or earbuds.</string>
    <string name="benefit_desc_2">Control your watch, band, or buds with detailed settings.</string>
    <string name="benefit_desc_3">Easily adjust the look and feel of your watch.</string>
    <string name="benefit_title_1">Connect and check status</string>
    <string name="benefit_title_2">Access advanced features</string>
    <string name="benefit_title_3">Change and customize watch faces</string>
    <string name="bg_update_after_os_up_fail">"Couldn't install update."</string>
    <string name="bg_update_after_os_up_noti_desc">Tap here to install it. Your wearable devices may disconnect during the update.</string>
    <string name="bg_update_after_os_up_success">Software successfully updated.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="btn_next">Next</string>
    <string name="build_number">Build number</string>
    <string name="button_text_bluetooth_turn_on">Turn on</string>
    <string name="button_text_close">Close</string>
    <string name="button_text_continue">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="cant_attach_more_files">"Can't attach more than %d files."</string>
    <string name="capture_screen">Capture screen</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_for_update">Not supported for the current version of your phone software. Check for an update, then try again.</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="compose">COMPOSE</string>
    <string name="confirm">Confirm</string>
    <string name="connect_popup_content">Connecting</string>
    <string name="connected">Connected</string>
    <string name="contact_us_ask">Ask questions</string>
    <string name="contact_us_chn_read_and_agree">Read and agree to the following:</string>
    <string name="contact_us_error">Error Reports</string>
    <string name="contact_us_faq">FAQ</string>
    <string name="contact_us_feedback">Feedback List</string>
    <string name="contact_us_select_device_guide">"Select the device or devices you're having a problem with. This helps us solve your problem more quickly."</string>
    <string name="copy">Copy</string>
    <string name="custom_binary_error_dialog_title">The operating system on your phone has been modified in an unauthorised way, and is not compatible with the Samsung Gear app. Check your operating system and try again.</string>
    <string name="delete">DELETE</string>
    <string name="dialog_popup_button_later">Later</string>
    <string name="dialog_popup_button_update">Update</string>
    <string name="discovery_guide_description">"Your device might not appear if it's connected to a different phone. Here's what to do:"</string>
    <string name="discovery_guide_description_link">"Your device might not appear if it's connected to a different phone. %1$sGet help%2$s."</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="done">DONE</string>
    <string name="download_error_chian_sa_not_signed">Sign in to your Samsung account first.</string>
    <string name="download_error_china_sim_mismatch">"Your SIM card country doesn't match your Samsung account country."</string>
    <string name="download_error_china_title">"Couldn't set up your watch"</string>
    <string name="download_error_eos_description">"Dear %1$s customers,

According to the service operation policy, %2$s does not support interworking with its mobile phones that will be released after 2021.
This decision has been made based on the judgment that the existing service quality cannot be maintained through app update alone. Please be aware of this when changing your mobile phone in the future.
If you have any further questions, please contact our call center(%3$shttp://samsung.com/support%4$s), Samsung members or %5$shttp://help.content.samsung.com%6$s and we'll take you through it.
"</string>
    <string name="download_install_app_restart_description">Galaxy Wearable will close to apply the update. Open it again after the update is complete.</string>
    <string name="download_install_main_description_band">Your phone will use this software to connect to your band.</string>
    <string name="download_install_main_description_earbud">Your phone will use this software to connect to your earbuds.</string>
    <string name="download_install_main_description_watch">Your phone will use this software to connect to your watch.</string>
    <string name="download_install_main_title">Downloading software...</string>
    <string name="dragndroplist_drag_move">Now at position %d.</string>
    <string name="dragndroplist_drag_release">Item dropped into position %d.</string>
    <string name="dragndroplist_drag_start">Started dragging item at position %d.</string>
    <string name="dragndroplist_item_cannot_be_dragged">Item at position %d cannot be dragged.</string>
    <string name="earbuds">Earbuds</string>
    <string name="earbuds_guide">To connect, put the earbuds in your ears, then touch and hold both earbuds for 3 seconds until you hear a beep.</string>
    <string name="earbuds_guide_additional">To connect your %s, put the earbuds in the case, then touch and hold both earbuds for 3 seconds until the light starts blinking red and green.</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_while_sending">A server error has occurred.</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_not_sent">Could not send the feedback</string>
    <string name="feedback_sent_success">Feedback successfully sent</string>
    <string name="file_already_attached">Unable to attach file.File already attached.</string>
    <string name="font_fontFamily_roboto_medium">sans-serif</string>
    <string name="font_fontFamily_roboto_regular">sans-serif</string>
    <string name="frequency">Frequency</string>
    <string name="frequency_not_selected">"Couldn't send error report.Select frequency of problem and try again"</string>
    <string name="gear_fit_model_name">Gear Fit</string>
    <string name="gear_not_presesnt">"Mine's not here"</string>
    <string name="getting_update_information">Getting update information…</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="no_gear_title">Connecting a new device</string>
    <string name="permission_guide_location_description">Galaxy Wearable uses the Location permission to use Bluetooth to search for nearby devices.</string>
    <string name="permission_link_description">"See %1$spermissions for Galaxy Wearable%2$s and how they're used."</string>
    <string name="permission_location">Location</string>
    <string name="sensitive_privacy_text">Use of sensitive personal data for required functions</string>
    <string name="transfer_privacy_text">Transfer of personal data abroad</string>
    <string name="uhm_update_download_progress">Downloading...</string>
    <string name="uhm_update_exist_notification_subtitle">A new version is available.</string>
    <string name="watch">Watch</string>
    <string name="watch_guide">On the Apps screen, Tap Settings > Connect to new phone.</string>
    <string name="welcome_to_samsung_gear_promotion_contact_us">Contact us</string>
</resources>