<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/main_background_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/logoImageView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/main_logo_margin_top" android:src="@drawable/gear_welcome_logo" android:tint="@color/main_logo_tint_color" android:layout_centerHorizontal="true" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/update_select_layout" android:paddingTop="5.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/logoImageView">
        <TextView android:textSize="14.0sp" android:textColor="@color/description_text_color" android:gravity="center" android:id="@id/update_desc_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/uhm_update_exist_notification_subtitle" android:lineSpacingExtra="21.0sp" />
        <TextView android:textSize="14.0sp" android:textColor="@color/description_text_color" android:gravity="center" android:id="@id/apkSize_txt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="39.0dip" android:lineSpacingExtra="21.0sp" />
        <Button android:textSize="@dimen/bottom_single_button_text_size" android:textColor="@color/button_text_color" android:id="@id/update_btn" android:background="@drawable/button_background_show_shape_blue" android:layout_width="@dimen/center_button_width" android:layout_height="@dimen/center_button_height" android:text="@string/dialog_popup_button_update" android:lineSpacingExtra="18.0sp" android:fontFamily="@string/font_fontFamily_roboto_medium" />
    </LinearLayout>
    <com.samsung.android.app.twatchmanager.uiitems.CircleProgressBar android:id="@id/update_loading_layout" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_marginBottom="91.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <TextView android:textSize="10.0dip" android:textColor="@color/main_title_text_color" android:id="@id/getting_update_info_textview" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="60.0dip" android:text="@string/getting_update_information" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="@style/robotoRegular" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/download_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="46.0dip" android:layout_below="@id/logoImageView">
        <TextView android:textSize="15.0sp" android:textColor="@color/main_title_text_color" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/uhm_update_download_progress" />
        <ProgressBar android:id="@id/setupProgress" android:layout_width="248.0dip" android:layout_height="4.0dip" android:layout_marginTop="21.0dip" android:indeterminate="false" style="@style/setupProgressBar" />
        <TextView android:textSize="15.0sp" android:textColor="@color/description_text_color" android:gravity="center" android:id="@id/statusText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14.5dip" />
    </LinearLayout>
    <TextView android:textSize="14.0sp" android:textColor="@color/description_text_color" android:gravity="bottom" android:id="@id/cancel_btn" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="@dimen/dialog_bottom_button_height" android:layout_marginBottom="70.0dip" android:text="@string/cancel" android:layout_below="@id/update_select_layout" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:paddingStart="@dimen/main_title_margin_start" android:paddingEnd="@dimen/main_title_margin_end" style="@style/robotoMedium" />
    <TextView android:textSize="14.0dip" android:textColor="@color/description_text_color" android:gravity="center" android:id="@id/downloading_description" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="46.0dip" android:text="@string/download_install_app_restart_description" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:layout_marginStart="30.0dip" android:layout_marginEnd="30.0dip" style="@style/robotoRegular" />
</RelativeLayout>