<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/main_background_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginBottom="16.0dip" android:fillViewport="true" android:layout_above="@id/bottom_layout">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:layout_above="@id/start_button">
            <TextView android:textSize="@dimen/main_title_text_size" android:textColor="@color/main_title_text_color" android:gravity="center_horizontal" android:id="@id/main_title_textview" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/main_logo_margin_top" android:minHeight="@dimen/main_title_height" android:layout_centerHorizontal="true" android:layout_marginStart="@dimen/main_title_margin_start" android:layout_marginEnd="@dimen/main_title_margin_end" style="@style/robotoMedium" />
            <LinearLayout android:gravity="bottom" android:orientation="vertical" android:id="@id/general_permission_info_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:minHeight="30.0dip" android:layout_below="@id/main_title_textview" android:layout_alignParentBottom="true" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip">
                <TextView android:textSize="13.0dip" android:textColor="@color/sub_title_text_color" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/permission_link_textview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permission_link_description" />
            </LinearLayout>
            <LinearLayout android:gravity="bottom" android:orientation="vertical" android:id="@id/permission_info_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:minHeight="85.0dip" android:layout_below="@id/main_title_textview" android:layout_alignParentBottom="true" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip">
                <ImageView android:layout_gravity="center_horizontal" android:id="@id/permission_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/oobe_permission_ic_location" android:tint="@color/main_title_text_color" />
                <TextView android:textSize="18.0dip" android:textColor="@color/main_title_text_color" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/permission_icon_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permission_location" />
                <TextView android:textSize="13.0dip" android:textColor="@color/sub_title_text_color" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/permission_icon_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permission_guide_location_description" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
    <LinearLayout android:orientation="vertical" android:id="@id/bottom_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="18.0dip" android:layout_alignParentBottom="true">
        <TextView android:textSize="@dimen/bottom_single_button_text_size" android:textColor="@color/button_text_color" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/start_button" android:background="@drawable/button_background_show_shape_blue" android:clickable="true" android:layout_width="@dimen/center_button_width" android:layout_height="@dimen/center_button_height" android:text="@string/button_text_continue" android:layout_above="@id/cancel_button" android:textAllCaps="false" style="@style/robotoMedium" />
    </LinearLayout>
</RelativeLayout>